--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,11 @@
 <resources>
     <string name="app_name">Locations</string>
 
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="back_button"><![CDATA[<Back]]></string>
     <string name="finish_location_text"><![CDATA[Done>]]></string>
     <string name="google_maps_key">AIzaSyD3KbzyO27POmBxsvku9mGGjmW2P02Axy4</string>
+
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
 </resources>
